# zeal-bricked

./: .gitignore  CMakeLists.txt  Makefile  README.md
assets/: bricked-full.aseprite  bricked.aseprite  bricked.zmt  mario.zmt
src/: assets.c  assets.h  ball.c  ball.h  bricked.c  bricked.h  bricks.c  bricks.h  levels.c  levels.h  main.c  player.c  player.h
